--- a/res/css/css_custom.css
+++ b/res/css/css_custom.css
@@ -1,19 +1,17 @@
 :root {
-  --main-bg-color:  #f5f5ed;
-  --main-bg-color_2:  #2E3309;
+  --bg-color_1:  #f5f5ed;
+  --bg-color_2:  #2E3309;
+  --bg-color_3:  #464b41;
 }
 .dark-accent{ color: #FDB90F;}
 .light-accent{ color: #93A616; }
-.col_1{ 
-    background-color: black;
-    color: #61bdbd; }
 
 
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
-  color: #61bdbd;
-  background-color: --main-bg-color;
+  color: var(--bg-color_1);
+  background-color: var(--bg-color_2);
   line-height: 1.8;
 }
 
@@ -29,9 +27,14 @@ body, html {
 
 /* First image (Logo. Full height) */
 .personalHead {
-  background-image:linear-gradient(45deg, --main-bg-color 0%, #bd6161 67%,#d49797 90%);
-  min-height: 45%;
-  background-color: #bd6161;
+  min-height: 35%;
+  border-bottom-width: 1px;
+  border-bottom: solid;
+  border-color: var(--bg-color_1);
+}
+
+.myBack {
+  background-image:linear-gradient(45deg, var(--bg-color_1) 0%, var(--bg-color_2) 67%,var(--bg-color_3) 90%);
 }
 
 /* Second image (Portfolio) */
@@ -105,15 +108,16 @@ body, html {
 }
 
 .myh1 {
-	font-size: 14vw;
 	text-align: center;
-	line-height: 1;
+  line-height: 1;
+  white-space:nowrap;
 	margin: 0;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	position: absolute;
-	color: rgba(45,45,45,1);
+  color: var(--bg-color_1);
+  background-color: var(--bg-color_2);
 }
 	
 .myh1:before {
@@ -127,7 +131,18 @@ body, html {
 		left: 27.5%;
 		text-align: left;
 		animation: flicker 3s linear infinite;
-	}
+  }
+  
+  .myh2 {
+    line-height: 1;
+    color: var(--bg-color_1);
+    /* background-color: black; */
+    display: inline-block;
+    margin: 5px;
+    padding: 8px;
+    font-size: 18px;
+  }
+      
 
 @keyframes flicker {
 	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
