--- a/res/css/css_custom_V2.css
+++ b/res/css/css_custom_V2.css
@@ -36,6 +36,7 @@
   font-size: 14px;
   color: white;
   font-weight: bold;
+/*  min-width: auto; */
   text-shadow: 0.1em 0 black, 0 0.1em black, -0.1em 0 black, 0 -0.1em black, -0.1em -0.1em black, -0.1em 0.1em black, 0.1em -0.1em black, 0.1em 0.1em black;
 }
 .bar::before{
