--- a/res/css/style.css
+++ b/res/css/style.css
@@ -25,6 +25,15 @@
   }
 }
 
+@keyframes animate-stripes{
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 80px 0;
+            }
+}
+
 #c1{
   width: 50%;
 }
@@ -36,24 +45,18 @@
   font-size: 14px;
   color: white;
   font-weight: bold;
-/*  min-width: auto; */
   text-shadow: 0.1em 0 black, 0 0.1em black, -0.1em 0 black, 0 -0.1em black, -0.1em -0.1em black, -0.1em 0.1em black, 0.1em -0.1em black, 0.1em 0.1em black;
 }
 .bar::before{
   content:  attr(data-skill);
-  /* background-color: var(--bg-color_2); */
   background-image: repeating-linear-gradient(
     -45deg,
     transparent 0 2px,
-    #e2845b91 2px 4px
-);
+    #e2845b91 2px 4px);
   display: inline-block;
   padding: 5px 0 5px 10px;
   border-radius: inherit;
-  animation: load 2s 0s;
-  -webkit-animation: load 2s 0s;
-  -moz-animation: load 2s 0s;
-  -o-animation: load 2s 0s;
+  animation: load 2s 0s, animate-stripes 3s linear infinite;
 }
 
 .bar.learning::before{
@@ -69,32 +72,16 @@
   width: calc(80% - 10px);
 }
 .bar.expert::before{
-  width: calc(100%);
+  width: calc(100% - 10px);
 }
 
- @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Karla&display=swap");
  :root {
      --width--container: 900px;
  }
- 
- *,
- *::before,
  *::after {
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
  }
- 
- /* Remove default margin */
- body,
- h1,
- h2,
- h3,
- h4,
- h5,
- h6 {
-     margin: 0;
- }
- 
  html {
      overflow-x: hidden;
  }
@@ -108,33 +95,6 @@
      overflow-x: hidden;
  }
  
- /* Make images easier to work with */
- img {
-     /* display: block; */
-     max-width: 100%;
-     float:right;
- }
- 
- /* Inherit fonts for inputs and buttons */
- input,
- button,
- textarea,
- select {
-     font: inherit;
- }
- 
- /* Remove all animations and transitions for people that prefer not to see them */
- @media (prefers-reduced-motion: reduce) {
-     * {
-         -webkit-animation-duration: 0.01ms !important;
-                 animation-duration: 0.01ms !important;
-         -webkit-animation-iteration-count: 1 !important;
-                 animation-iteration-count: 1 !important;
-         -webkit-transition-duration: 0.01ms !important;
-                 transition-duration: 0.01ms !important;
-         scroll-behavior: auto !important;
-     }
- }
  nav {
      position: fixed;
      top: 0;
@@ -172,7 +132,7 @@
      -webkit-writing-mode: vertical-rl;
          -ms-writing-mode: tb-rl;
              writing-mode: vertical-rl;
-     overflow-y: auto;
+             overflow: hidden;
  }
  nav ul li {
      padding: 10px 0;
@@ -198,53 +158,11 @@
      border-left: solid 4px #99b7bb;
      border-bottom: 0;
  }
- nav ul li a:hover,
  nav ul li a:focus {
      border-left: solid 4px #edebe3;
      border-bottom: 0;
  }
  
- @media only screen and (min-width: 640px) {
-     nav {
-         top: 0;
-         left: 0;
-         width: 100%;
-         height: auto;
-         background-color: #99b7bb;
-         -webkit-box-orient: horizontal;
-         -webkit-box-direction: normal;
-             -ms-flex-direction: row;
-                 flex-direction: row;
-         -webkit-box-pack: end;
-             -ms-flex-pack: end;
-                 justify-content: flex-end;
-     }
-     nav ul {
-         -webkit-box-pack: end;
-             -ms-flex-pack: end;
-                 justify-content: flex-end;
-         -webkit-writing-mode: horizontal-tb;
-             -ms-writing-mode: lr-tb;
-                 writing-mode: horizontal-tb;
-         padding: 0;
-         width: auto;
-         overflow: hidden;
-     }
-     nav ul li {
-         padding: 0 10px;
-         width: auto;
-     }
-     nav ul li a {
-         padding: 20px 0;
-         border-bottom: solid 4px #99b7bb;
-         border-left: 0;
-     }
-     nav ul li a:hover,
-     nav ul li a:focus {
-         border-bottom: solid 4px #edebe3;
-         border-left: 0;
-     }
- }
  header {
      padding-top: 120px;
      padding-bottom: 1rem;
@@ -279,7 +197,7 @@
      bottom: 0;
      left: 0;
      height: 15px;
-     width: 120px;
+     width: 185px;
      background-image: repeating-linear-gradient(
          -45deg,
          transparent 0 2px,
@@ -318,30 +236,13 @@
      padding: 8px 20px;
      text-align: center;
  }
- header .container > a.link-github:hover,
  header .container > a.link-github:focus {
      background-color: transparent;
  }
- header .container > a.link-github:hover,
  header .container > a.link-github:focus {
      color: #edebe3;
  }
  
- @media screen and (max-width: 640px) {
-     header {
-         padding-top: 1.5rem;
-     }
-     header .container {
-         max-width: 100%;
-         padding-right: 60px;
-         grid-template-areas: "h1block" "h2block" "space" "maintained" "github";
-         grid-template-columns: auto;
-         grid-template-rows: auto auto 4rem 2fr 1fr;
-     }
-     header .container h1 {
-         font-size: 6rem;
-     }
- }
  html {
      scroll-behavior: smooth;
  }
@@ -351,10 +252,6 @@
      grid-template-areas: "header header" "main main" "aside1 aside2" "footer footer";
      grid-template-columns: 1fr 1fr;
  }
- 
- header a,
- main a,
- aside a,
  footer a {
      text-decoration: none;
      color: #252f38;
@@ -362,37 +259,19 @@
      -webkit-transition: all 0.3s ease-in-out;
      transition: all 0.3s ease-in-out;
  }
- header a svg,
- main a svg,
- aside a svg,
  footer a svg {
      width: 0.8rem;
      height: 0.8rem;
      fill: #edebe3;
      margin-right: 5px;
  }
- header a:hover,
- header a:focus,
- main a:hover,
- main a:focus,
- aside a:hover,
- aside a:focus,
- footer a:hover,
  footer a:focus {
      background-color: #e2845b;
      color: #252f38;
  }
- header a:hover svg,
- header a:focus svg,
- main a:hover svg,
- main a:focus svg,
- aside a:hover svg,
- aside a:focus svg,
- footer a:hover svg,
  footer a:focus svg {
      fill: #e2845b;
  }
- 
  header {
      grid-area: header;
  }
@@ -570,145 +449,9 @@
          -ms-flex: 1;
              flex: 1;
  }
- article footer#files .container > a:hover,
  article footer#files .container > a:focus {
      background-color: transparent;
- }
- 
- aside {
-     background-color: #d9d5c4;
- }
- aside .container {
-     padding: 1.5rem;
- }
- aside .container ul {
-     list-style: none;
-     margin: 0;
-     margin-bottom: 1.5rem;
-     padding: 0;
- }
- aside .container > a {
-     display: inline-block;
-     color: #252f38;
-     font-weight: bold;
-     white-space: nowrap;
-     background-color: #e2845b;
-     border: solid 2px #e2845b;
-     padding: 8px 20px;
-     text-align: center;
-     border: solid 2px #a76244;
- }
- aside .container > a:hover,
- aside .container > a:focus {
-     background-color: transparent;
- }
- 
- aside.profile {
-     grid-area: aside2;
-     padding: 3rem 1.5rem;
- }
- aside.profile .container {
-     max-width: calc(var(--width--container) / 2 - 3rem);
-     margin: 0;
-     margin-right: auto;
-     border: solid 2px #e2845b;
-     -webkit-box-shadow: 5px 5px 0 #e2845b;
-             box-shadow: 5px 5px 0 #e2845b;
-     background-color: #edebe3;
- }
- aside.profile h4#profile-title {
-     text-transform: uppercase;
-     font-size: 0.8rem;
-     letter-spacing: 0.1em;
-     display: inline-block;
-     padding-bottom: 0.6rem;
-     position: relative;
- }
- aside.profile h4#profile-title:after {
-     content: "";
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     width: 80px;
-     height: 2px;
-     background-color: #e2845b;
- }
- aside.profile ul li {
-     font-size: 1rem;
- }
- aside.profile ul li.profile-title {
-     margin-bottom: 1rem;
- }
- aside.profile ul li.profile-title span:nth-child(1) {
-     position: absolute;
-     width: 1px;
-     height: 1px;
-     padding: 0;
-     margin: -1px;
-     overflow: hidden;
-     clip: rect(0, 0, 0, 0);
-     white-space: nowrap;
-     border: 0;
- }
- aside.profile ul li.profile-title span:nth-child(2) {
-     font-family: "Abril Fatface", "Georgia", "Times New Roman", cursive;
-     font-size: 2.5rem;
-     line-height: 1em;
-     display: block;
-     margin: 10px 0;
- }
- aside.profile ul li span:first-child {
-     font-weight: bold;
-     display: inline-block;
- }
- 
- aside#styles {
-     grid-area: aside1;
-     padding: 1.5rem 0;
- }
- aside#styles .container {
-     max-width: calc(900px / 2);
-     margin: 0;
-     margin-left: auto;
- }
- aside#styles h2 {
-     font-size: 1.8rem;
-     font-weight: bold;
-     text-transform: uppercase;
-     letter-spacing: 0.05em;
-     line-height: 1em;
-     padding-bottom: 0.8rem;
-     position: relative;
- }
- aside#styles h2:after {
-     content: "";
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     width: 100px;
-     height: 4px;
-     background-color: #e2845b;
- }
- aside#styles ul.features {
-     margin: 1rem 0;
- }
- aside#styles ul.features li {
-     margin-bottom: 1rem;
- }
- aside#styles ul.features li span > a {
-     display: block;
-     border: 0;
-     font-family: "Abril Fatface", "Georgia", "Times New Roman", cursive;
-     font-size: 2rem;
-     margin-bottom: -10px;
- }
- aside#styles ul.features li span > span {
-     font-size: 0.7rem;
-     font-weight: bold;
-     text-transform: uppercase;
-     letter-spacing: 0.1em;
- }
- 
+ } 
  footer.page-footer {
      grid-area: footer;
      background-color: #252f38;
@@ -717,7 +460,11 @@
  footer.page-footer a {
      color: #edebe3;
  }
- footer.page-footer a:hover,
+ footer.page-footer a:hover
+ {
+   color:#e2845b;
+   background-color:#252f38
+ }
  footer.page-footer a:focus {
      color: #252f38;
  }
@@ -759,80 +506,13 @@
      text-align: center;
      width: 100%;
  }
- footer.page-footer ul li a:hover,
  footer.page-footer ul li a:focus {
      background-color: transparent;
  }
- footer.page-footer ul li a:hover,
  footer.page-footer ul li a:focus {
      color: #edebe3;
  }
- 
- .skip-link {
-     position: absolute;
-     top: auto;
-     left: -10000px;
-     width: 1px;
-     height: 1px;
-     overflow: hidden;
-     background-color: #e2845b;
-     border: solid 2px #e2845b;
-     color: #252f38;
-     font-size: 1.125rem;
-     font-weight: bold;
-     white-space: nowrap;
-     padding: 8px 20px;
-     text-align: center;
-     text-decoration: none;
- }
- .skip-link:focus {
-     position: fixed;
-     top: 4rem;
-     left: 1rem;
-     width: auto;
-     height: auto;
-     display: inline-block;
-     z-index: 12;
- }
- 
- @media screen and (max-width: 640px) {
-     body {
-         grid-template-areas: "header" "main" "aside2" "aside1" "footer";
-         grid-template-columns: 1fr;
-     }
- 
-     article {
-         max-width: 100%;
-     }
-     article section a.link-guidelines {
-         display: block;
-     }
- 
-     article,
-     aside.profile,
-     aside#styles,
-     aside#sponsor-footer {
-         padding-right: 60px;
-     }
- 
-     aside#styles .container {
-         max-width: 100%;
-     }
- 
-     footer.page-footer .container {
-         max-width: 100%;
-         padding-right: 60px;
-     }
- 
-     .skip-link:focus {
-         top: 1rem;
-     }
- }
- @media screen and (max-width: 900px) {
-     article:not(:last-child):after {
-         left: calc(35vw - 30px);
-     }
- }
+  
  body {
      font-family: "Karla", sans-serif;
      font-size: 18px;
@@ -854,6 +534,7 @@
   .container h2 span.cursor.typing {
     animation: none;
   }
+
   @keyframes blink {
     0%  { background-color: #ccc; }
     49% { background-color: #ccc; }
@@ -861,3 +542,92 @@
     99% { background-color: transparent; }
     100%  { background-color: #ccc; }
   }
+
+  /* Remove all animations and transitions for people that prefer not to see them */
+  @media (prefers-reduced-motion: reduce) {
+    * {
+        -webkit-animation-duration: 0.01ms !important;
+                animation-duration: 0.01ms !important;
+        -webkit-animation-iteration-count: 1 !important;
+                animation-iteration-count: 1 !important;
+        -webkit-transition-duration: 0.01ms !important;
+                transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
+}
+
+  @media only screen and (min-width: 640px) {
+    nav {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        background-color: #99b7bb;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
+    }
+    nav ul {
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
+        -webkit-writing-mode: horizontal-tb;
+            -ms-writing-mode: lr-tb;
+                writing-mode: horizontal-tb;
+        padding: 0;
+        width: auto;
+        overflow: hidden;
+    }
+    nav ul li {
+        padding: 0 10px;
+        width: auto;
+    }
+    nav ul li a {
+        padding: 20px 0;
+        border-bottom: solid 4px #99b7bb;
+        border-left: 0;
+    }
+    nav ul li a:hover,
+    nav ul li a:focus {
+        border-bottom: solid 4px #edebe3;
+        border-left: 0;
+    }
+}
+
+    @media screen and (max-width: 640px) {
+        body {
+            grid-template-areas: "header" "main" "aside2" "aside1" "footer";
+            grid-template-columns: 1fr;
+        }
+    
+        article {
+            max-width: 100%;
+        }
+        article section a.link-guidelines {
+            display: block;
+        }
+        footer.page-footer .container {
+            max-width: 100%;
+            padding-right: 60px;
+        }
+        .skip-link:focus {
+            top: 1rem;
+        }
+        header {
+            padding-top: 1.5rem;
+        }
+        header .container {
+            max-width: 100%;
+            padding-right: 60px;
+            grid-template-areas: "h1block" "h2block" "space" "maintained" "github";
+            grid-template-columns: auto;
+            grid-template-rows: auto auto 4rem 2fr 1fr;
+        }
+        header .container h1 {
+            font-size: 6rem;
+        }
+    }
