--- a/res/css/style.css
+++ b/res/css/style.css
@@ -36,12 +36,11 @@
   font-size: 14px;
   color: white;
   font-weight: bold;
-/*  min-width: auto; */
   text-shadow: 0.1em 0 black, 0 0.1em black, -0.1em 0 black, 0 -0.1em black, -0.1em -0.1em black, -0.1em 0.1em black, 0.1em -0.1em black, 0.1em 0.1em black;
 }
 .bar::before{
   content:  attr(data-skill);
-  /* background-color: var(--bg-color_2); */
+  white-space: nowrap;
   background-image: repeating-linear-gradient(
     -45deg,
     transparent 0 2px,
@@ -69,7 +68,7 @@
   width: calc(80% - 10px);
 }
 .bar.expert::before{
-  width: calc(100%);
+  width: calc(100% - 10px);
 }
 
  @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Karla&display=swap");
@@ -83,8 +82,6 @@
      -webkit-box-sizing: border-box;
              box-sizing: border-box;
  }
- 
- /* Remove default margin */
  body,
  h1,
  h2,
@@ -99,7 +96,6 @@
      overflow-x: hidden;
  }
  
- /* Set core body defaults */
  body {
      min-height: 100vh;
      font-size: 100%;
@@ -107,23 +103,6 @@
      text-rendering: optimizeSpeed;
      overflow-x: hidden;
  }
- 
- /* Make images easier to work with */
- img {
-     /* display: block; */
-     max-width: 100%;
-     float:right;
- }
- 
- /* Inherit fonts for inputs and buttons */
- input,
- button,
- textarea,
- select {
-     font: inherit;
- }
- 
- /* Remove all animations and transitions for people that prefer not to see them */
  @media (prefers-reduced-motion: reduce) {
      * {
          -webkit-animation-duration: 0.01ms !important;
@@ -575,140 +554,6 @@
      background-color: transparent;
  }
  
- aside {
-     background-color: #d9d5c4;
- }
- aside .container {
-     padding: 1.5rem;
- }
- aside .container ul {
-     list-style: none;
-     margin: 0;
-     margin-bottom: 1.5rem;
-     padding: 0;
- }
- aside .container > a {
-     display: inline-block;
-     color: #252f38;
-     font-weight: bold;
-     white-space: nowrap;
-     background-color: #e2845b;
-     border: solid 2px #e2845b;
-     padding: 8px 20px;
-     text-align: center;
-     border: solid 2px #a76244;
- }
- aside .container > a:hover,
- aside .container > a:focus {
-     background-color: transparent;
- }
- 
- aside.profile {
-     grid-area: aside2;
-     padding: 3rem 1.5rem;
- }
- aside.profile .container {
-     max-width: calc(var(--width--container) / 2 - 3rem);
-     margin: 0;
-     margin-right: auto;
-     border: solid 2px #e2845b;
-     -webkit-box-shadow: 5px 5px 0 #e2845b;
-             box-shadow: 5px 5px 0 #e2845b;
-     background-color: #edebe3;
- }
- aside.profile h4#profile-title {
-     text-transform: uppercase;
-     font-size: 0.8rem;
-     letter-spacing: 0.1em;
-     display: inline-block;
-     padding-bottom: 0.6rem;
-     position: relative;
- }
- aside.profile h4#profile-title:after {
-     content: "";
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     width: 80px;
-     height: 2px;
-     background-color: #e2845b;
- }
- aside.profile ul li {
-     font-size: 1rem;
- }
- aside.profile ul li.profile-title {
-     margin-bottom: 1rem;
- }
- aside.profile ul li.profile-title span:nth-child(1) {
-     position: absolute;
-     width: 1px;
-     height: 1px;
-     padding: 0;
-     margin: -1px;
-     overflow: hidden;
-     clip: rect(0, 0, 0, 0);
-     white-space: nowrap;
-     border: 0;
- }
- aside.profile ul li.profile-title span:nth-child(2) {
-     font-family: "Abril Fatface", "Georgia", "Times New Roman", cursive;
-     font-size: 2.5rem;
-     line-height: 1em;
-     display: block;
-     margin: 10px 0;
- }
- aside.profile ul li span:first-child {
-     font-weight: bold;
-     display: inline-block;
- }
- 
- aside#styles {
-     grid-area: aside1;
-     padding: 1.5rem 0;
- }
- aside#styles .container {
-     max-width: calc(900px / 2);
-     margin: 0;
-     margin-left: auto;
- }
- aside#styles h2 {
-     font-size: 1.8rem;
-     font-weight: bold;
-     text-transform: uppercase;
-     letter-spacing: 0.05em;
-     line-height: 1em;
-     padding-bottom: 0.8rem;
-     position: relative;
- }
- aside#styles h2:after {
-     content: "";
-     position: absolute;
-     bottom: 0;
-     left: 0;
-     width: 100px;
-     height: 4px;
-     background-color: #e2845b;
- }
- aside#styles ul.features {
-     margin: 1rem 0;
- }
- aside#styles ul.features li {
-     margin-bottom: 1rem;
- }
- aside#styles ul.features li span > a {
-     display: block;
-     border: 0;
-     font-family: "Abril Fatface", "Georgia", "Times New Roman", cursive;
-     font-size: 2rem;
-     margin-bottom: -10px;
- }
- aside#styles ul.features li span > span {
-     font-size: 0.7rem;
-     font-weight: bold;
-     text-transform: uppercase;
-     letter-spacing: 0.1em;
- }
- 
  footer.page-footer {
      grid-area: footer;
      background-color: #252f38;
@@ -768,36 +613,9 @@
      color: #edebe3;
  }
  
- .skip-link {
-     position: absolute;
-     top: auto;
-     left: -10000px;
-     width: 1px;
-     height: 1px;
-     overflow: hidden;
-     background-color: #e2845b;
-     border: solid 2px #e2845b;
-     color: #252f38;
-     font-size: 1.125rem;
-     font-weight: bold;
-     white-space: nowrap;
-     padding: 8px 20px;
-     text-align: center;
-     text-decoration: none;
- }
- .skip-link:focus {
-     position: fixed;
-     top: 4rem;
-     left: 1rem;
-     width: auto;
-     height: auto;
-     display: inline-block;
-     z-index: 12;
- }
- 
  @media screen and (max-width: 640px) {
      body {
-         grid-template-areas: "header" "main" "aside2" "aside1" "footer";
+         grid-template-areas: "header" "main" "footer";
          grid-template-columns: 1fr;
      }
  
